# pan2fulldome

./: CMakeLists.txt  OpenCVWin10.props  README.md  appveyor.yml  opencv430install.sh  pan2fulldome.cpp  pan2fulldomex64.vcxproj  x64Win10.vcxproj
.github/workflows/: cmake.yml  msbuild.yml
appdir/: pan2fulldome.desktop
